4-Traefik/internal-traefik-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: traefik-ingress-controller-internal
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb-internal
spec:
  serviceName: traefik-ingress-lb-internal
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb-internal
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb-internal
        name: traefik-ingress-lb-internal
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:latest
        name: traefik-ingress-lb-internal
        ports:
         - name: http
           containerPort: 80
         - name: https
           containerPort: 443
         - name: admin
           containerPort: 8080
        args:
        - --api
        - --configfile=/config/traefik.toml
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 180
          periodSeconds: 3
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        configMap:
          name: traefik-conf-internal
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: k8s-app
                  operator: In
                  values:
                  - traefik-ingress-lb-internal
              topologyKey: kubernetes.io/hostname
