4-Traefik/external-traefik-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service-external
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb-external
spec:
  selector:
    k8s-app: traefik-ingress-lb-external
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 443
      name: https
    - protocol: TCP
      port: 8080
      name: admin
  type: LoadBalancer
  loadBalancerIP: 10.100.20.17
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-lb-external
  namespace: kube-system
  labels:
    traffic-type: internal
spec:
  rules:
  - host: traefik-ext.home.amer.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ingress-service-external
          servicePort: admin
