4-Traefik/internal-traefik-consul-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul-ui
  namespace: kube-system
spec:
  rules:
  - host: consul.home.amer.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: consul-traefik-ui
          servicePort: http
