4-Traefik/internal-traefik-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service-internal
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb-internal
spec:
  selector:
    k8s-app: traefik-ingress-lb-internal
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 443
      name: https
    - protocol: TCP
      port: 8080
      name: admin
  type: LoadBalancer
  loadBalancerIP: 10.100.20.16
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-lb-internal
  namespace: kube-system
spec:
  rules:
  - host: traefik.home.amer.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ingress-service-internal
          servicePort: admin
